--- a/login-js/media.css
+++ b/login-js/media.css
@@ -1,22 +1,23 @@
 @media (max-width:576px){
-
     .title{
         font-size: 30px;
+        text-align: center
     }
     .ask{
         font-size: 15px;
-    }
+        text-align: center;    }
     form{
         width: 300px;
+        height: 150px;
     }
     input{
         width: 200px;
         font-size: 15px;
     }
-    input:focus{
+    label{
         font-size: 15px;
     }
-    label{
+    input::placeholder{
         font-size: 15px;
     }
 }
